Version 2.0
--------------
2011-07-29 erra <erra@ya.ru>
	* common/numeric_def.h, common/struct_def.h, ircd/s_user.c,
		ircd/s_err.c, support/config.h.dist: HOLD_ENFORCED_NICKS
			option added to make it configurable

2011-07-28 erra <erra@ya.ru>
	* rusnet/rusnet_cmds.c: replace "translit" with "ascii" for iconv calls

2011-07-26 erra <erra@ya.ru>
	* ircd/s_misc.c: unused libidn support code removed (caused errors)

2011-07-25 erra <erra@ya.ru>
	* ircd/channel.c, ircd/s_user.c: is_chan_anyop fixed

2011-07-24 erra <erra@ya.ru>
	* ircd/channel.c, ircd/hash.c: obsoleted pieces of code cleared

2011-07-23 erra <erra@ya.ru>
	* common/msg_def.h, common/parse.c, ircd/channel.c,
		ircd/channel_ext.h: NTOPIC added (topic sync on netjoin)
	* ircd/channel.c, ircd/channel_ext.h, ircd/s_serv.c:
			send_channel_topic() added (for sending NTOPIC)
	* ircd/channel.c: is_chan_halfop replaced with is_chan_anyop

2011-07-19 erra <erra@ya.ru>
	* ircd/ircd.c: setlocale(LC_MESSAGES, SYS_LOCALE) added
	* support/config.h.dist: SYS_LOCALE definition added (for LC_TIME
		and LC_MESSAGES, defaults to C)

2011-07-18 erra <erra@ya.ru>
	* common/numeric_def.h, ircd/s_err.c: ERR_NICKTOOFAST added
	* common/struct_def.h: held timestamp added for local clients;
		conversion pointer moved to local clients part
	* common/send.c: client initializer fixed accordingly;
		send_message() revised
	* ircd/list.c: held initialization added; conv moved
	* ircd/s_user.c: ERR_NICKTOOFAST implemented for forced nicks

2011-07-17 erra <erra@ya.ru>
	* common/msg_def.h, common/parse.c, rusnet/rusnet_cmds.c,
		rusnet/rusnet_cmds_ext.h: m_svsmode and m_svsnick implemented

2011-07-08 erra <erra@ya.ru>
	* ircd/s_user.c: send_umode_out fixed not to pass extra umodes
		to older servers

2011-07-02 erra <erra@ya.ru>
	* ircd/res.c: do not perform IDN conversion for T_PTR
	* ircd/s_bsd.c: send_hostp_to_iauth() added

2011-07-01 erra <erra@ya.ru>
	* support/configure, support/configure.in: libidn check fixed for SunOS
