@@ -1,9 +1,16 @@
 Version 2.0
 --------------
+2011-08-03 erra <erra@ya.ru>
+	* ircd/s_misc.c: conv_free_conversion call moved from exit_one_client
+		to exit_client under MyConnect(sptr) check to avoid mess
+
+2011-08-02 erra <erra@ya.ru>
+	* ircd/list.c: HOLD_ENFORCED_NICKS framing fixed for cptr->held
+
 2011-07-29 erra <erra@ya.ru>
 	* common/numeric_def.h, common/struct_def.h, ircd/s_user.c,
 		ircd/s_err.c, support/config.h.dist: HOLD_ENFORCED_NICKS
-			option added to make it configurable
+			option added to make nick enforcement configurable
 
 2011-07-28 erra <erra@ya.ru>
 	* rusnet/rusnet_cmds.c: replace "translit" with "ascii" for iconv calls
